--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -38,6 +38,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.114",
     "codelyzer": "^4.4.2",
+    "hoek": "^4.2.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^2.0.5",
